# fastapi-product-base

./: .env  Makefile  README.md  docker-compose.yml
deploy/: Dockerfile
src/: Makefile  alembic.ini  main.py  pyproject.toml  settings.py
src/app/: conftest.py  models.py  routes.py  schema.py
src/app/database/: __init__.py  database.py  mixin.py
src/app/migrations/: env.py
src/app/migrations/versions/: cf21cf643365_.py
src/app/tests/: test_routes.py
